# pytest-linux-mac-diff

./: README.md
shared/: pyproject.toml
shared/shared/: test_utils.py
test_utils/: pyproject.toml
test_utils/test_utils/: __init__.py
tested/: pyproject.toml
tested/tests/: test_wat.py
