[tool.poetry]
name = "shared"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.plugins.pytest11]
test_utils = "shared.test_utils"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
